--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <section class="header">
-            
+            <nav>
+                <a href="index.html"><img src="images/logo.png"></a>
+            </nav>
         </section>
     </body>
 </html>
