--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <section class="header">
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
+                <div>
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                    </ul>
+                </div>
             </nav>
         </section>
     </body>
