--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <section class="header">
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
-                <div>
+                <div class="nav-links">
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
