Add div tag class "text-box" for center content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     </ul>
                 </div>
             </nav>
+        <div class="text-box">
+            <h1>Extraordinary People</h1>
+            <p>something</p>
+            <a href="">Visit us to know more</a>
+        </div>
         </section>
     </body>
 </html>
