Edit the p tag inside of class "text-box"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
         <div class="text-box">
             <h1>Extraordinary People</h1>
-            <p>something</p>
+            <p>They were the cherry on top of someone's already delicious life sundae.</p>
             <a href="">Visit us to know more</a>
         </div>
         </section>
