Add and style hero-btn class under text-box class

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="text-box">
             <h1>Extraordinary People</h1>
             <p>They were the cherry on top of someone's already delicious life sundae.</p>
-            <a href="">Visit us to know more</a>
+            <a href="" class="hero-btn">Visit us to know more</a>
         </div>
         </section>
     </body>
