--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
                 <div class="nav-links">
+                    <i class="fa fa-times" aria-hidden="true"></i>
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
