--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </nav>
         <div class="text-box">
             <h1>Extraordinary People</h1>
