--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
                 <div class="nav-links">
-                    <i class="fa fa-times" aria-hidden="true"></i>
+                    <i class="fa fa-times"></i>
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
@@ -23,7 +23,7 @@
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <i class="fa fa-bars"></i>
             </nav>
         <div class="text-box">
             <h1>Extraordinary People</h1>
