--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="header">
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
-                <div class="nav-links">
+                <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="">HOME</a></li>
@@ -31,5 +31,14 @@
             <a href="" class="hero-btn">Visit us to know more</a>
         </div>
         </section>
+        <script>
+            var navLinks = document.getElementById("navLinks");
+            function showMenu() {
+                navLinks.style.right = "0";
+            }
+            function hideMenu() {
+                navLinks.style.right = "-200px";
+            }
+        </script>
     </body>
 </html>
