Edit hero-btn class text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="text-box">
             <h1>Extraordinary People</h1>
             <p>They were the cherry on top of someone's already delicious life sundae.</p>
-            <a href="" class="hero-btn">Visit us to know more</a>
+            <a href="" class="hero-btn">Get to Know Them</a>
         </div>
         </section>
         <script>
