--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="">HOME</a></li>
-                        <li><a href="">ABOUT</a></li>
-                        <li><a href="">COURSE</a></li>
+                        <li><a href="">ABOUT ME</a></li>
+                        <li><a href="">MY GEMS</a></li>
                         <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
@@ -31,6 +31,11 @@
             <a href="" class="hero-btn">Get to Know Them</a>
         </div>
         </section>
+
+        <section>
+            <h1></h1>
+        </section>
+
         <script>
             var navLinks = document.getElementById("navLinks");
             function showMenu() {
