--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT ME</a></li>
                         <li><a href="">MY GEMS</a></li>
-                        <li><a href="">BLOG</a></li>
+                        <li><a href="">MESSAGE</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
