Add new section with class "mygems2"

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             </div>
         </section>
 
+        <section class="mygems2">
+            <h1>Friends I Ha- Love</h1>
+            <p>They're okay.</p>
+        </section>
+
         <script>
             var navLinks = document.getElementById("navLinks");
             function showMenu() {
