--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
         <section class="mygems2">
             <h1>Friends I Ha- Love</h1>
             <p>They're okay.</p>
+
+            <div class="row">
+                <div class="friends-col">
+                    <img src="images/london.png">
+                </div>
+            </div>
         </section>
 
         <script>
