Add "layer" class inside friends-col class

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <div class="row">
                 <div class="friends-col">
                     <img src="images/london.png">
+                    <class class="layer">
+                        
+                    </class>
                 </div>
             </div>
         </section>
