--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="friends-col">
                     <img src="images/london.png">
                     <class class="layer">
-                        
+                        <h3>Dide & Tahum</h3>
                     </class>
                 </div>
             </div>
