Add 2 more divs with friends-col

--- a/index.html
+++ b/index.html
@@ -63,10 +63,25 @@
             <p>They're okay.</p>
 
             <div class="row">
+
                 <div class="friends-col">
                     <img src="images/london.png">
                     <class class="layer">
                         <h3>Dide & Tahum</h3>
+                    </class>
+                </div>
+
+                <div class="friends-col">
+                    <img src="images/newyork.png">
+                    <class class="layer">
+                        <h3>Becca & Bontot</h3>
+                    </class>
+                </div>
+
+                <div class="friends-col">
+                    <img src="images/washington.png">
+                    <class class="layer">
+                        <h3>Kaline</h3>
                     </class>
                 </div>
             </div>
