Add description to each div on friends-col

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                     <img src="images/london.png">
                     <class class="layer">
                         <h3>Dide & Tahum</h3>
+                        <p>They're like my dysfunctional family, but with one who vapes like shit
+                            and one who's always infuriated about her sperm donor.</p>
                     </class>
                 </div>
 
@@ -75,6 +77,8 @@
                     <img src="images/newyork.png">
                     <class class="layer">
                         <h3>Becca & Bontot</h3>
+                        <p>They're most likely the peeps who would bail me out of jail,
+                            but will be the main reason I'm there in the first place.</p>
                     </class>
                 </div>
 
@@ -82,9 +86,16 @@
                     <img src="images/washington.png">
                     <class class="layer">
                         <h3>Kaline</h3>
+                        <p>We're the type of friends who always have each other's backs, 
+                            but also roast each other relentlessly.</p>
                     </class>
                 </div>
             </div>
+        </section>
+
+        <section class="dearest">
+            <h1>Fam and My Lover</h1>
+            <p>My love for them is too good not to showcase</p>
         </section>
 
         <script>
