Add style to the p tags in layer class

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <img src="images/london.png">
                     <class class="layer">
                         <h3>Dide & Tahum</h3>
-                        <p>They're like my dysfunctional family, but with one who vapes like shit
-                            and one who's always infuriated about her sperm donor.</p>
+                        <p>They're like my dysfunctional family, but <br> with one who vapes like shit
+                            and <br> the other who's always infuriated <br> about her sperm donor.</p>
                     </class>
                 </div>
 
@@ -77,7 +77,7 @@
                     <img src="images/newyork.png">
                     <class class="layer">
                         <h3>Becca & Bontot</h3>
-                        <p>They're most likely the peeps who would bail me out of jail,
+                        <p>They're most likely the peeps who would <br> bail me out of jail,
                             but will be the main reason I'm there in the first place.</p>
                     </class>
                 </div>
