Add break line in p tag under layer class

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <class class="layer">
                         <h3>Becca & Bontot</h3>
                         <p>They're most likely the peeps who would <br> bail me out of jail,
-                            but will be the main reason I'm there in the first place.</p>
+                            but will be the main reason <br> I'm there in the first place.</p>
                     </class>
                 </div>
 
