Add comments to divide sections

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
         </section>
 
+        <!--- People I Cherish --->
         <section class="mygems">
             <h1>People I Cherish</h1>
             <p>People who love real, sweet, and hard.</p>
@@ -58,6 +59,7 @@
             </div>
         </section>
 
+        <!--- Friends I Ha- Love-->
         <section class="mygems2">
             <h1>Friends I Ha- Love</h1>
             <p>They're okay.</p>
@@ -93,6 +95,7 @@
             </div>
         </section>
 
+        <!-- Fam and My Lover-->
         <section class="dearest">
             <h1>Fam and My Lover</h1>
             <p>My love for them is too good not to showcase</p>
