Change description to each p tag in dear-col class

--- a/index.html
+++ b/index.html
@@ -97,8 +97,38 @@
 
         <!-- Fam and My Lover-->
         <section class="dearest">
-            <h1>Fam and My Lover</h1>
+            <h1>My Fam and My Lover</h1>
             <p>My love for them is too good not to showcase</p>
+
+            <div class="row">
+                <div class="dear-col">
+                    <img src="images/library.png">
+                    <h3>Strongest Support System</h3>
+                    <p>You are a true inspiration and a shining example of what it means to be a supportive and loving unit.
+                        Your unwavering commitment and willingness to always lend a helping hand to me is a testament to the strength and depth of your love.
+                        We have faced challenges and obstacles together, and through it all, we have emerged stronger and more united than ever. 
+                        Our love and support for one another is a beautiful thing to witness, and I have no doubt that it will continue to serve as my source of comfort and strength for years to come.</p>
+                </div>
+                <div class="dear-col">
+                    <img src="images/basketball.png">
+                    <h3>Most Ethereal Woman</h3>
+                    <p>If we're eating at Jollibee and you wanted the last chicken skin, I'd gladly give it to you.
+                        If we are cold and only have 1 blanket, I'd happily let you take the huge part.
+                        If we are eating sinigang na hipon and we're both hungry, I'd gladly peel off the shrimps first
+                        so you could eat with ease. These aren't enough to say how much I adore you and how 
+                        I will forever bow down to your beauty. My love for you is beyond the strength of what words can offer.
+                    </p>
+                </div>
+                <div class="dear-col">
+                    <img src="images/cafeteria.png">
+                    <h3>Purrfectly Adorable Beau</h3>
+                    <p>In times where I needed a hand, I found your paw.
+                        To be your furmom is the most wonderful thing I have ever experienced.
+                        Your unconditional love and support have been a constant source of comfort and joy in my life.
+                        I am grateful every day for the happiness and companionship you bring into my home.</p>
+                </div>
+            </div>
+            
         </section>
 
         <script>
