Add style to dear-col class and its img

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <p>In times where I needed a hand, I found your paw.
                         To be your furmom is the most wonderful thing I have ever experienced.
                         Your unconditional love and support have been a constant source of comfort and joy in my life.
-                        I am grateful every day for the happiness and companionship you bring into my home.</p>
+                        I am grateful every day for the happiness and companionship you bring into our home.</p>
                 </div>
             </div>
             
