Add section for remarkable lines

--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
             
         </section>
 
+        <!-- Funny Quotes -->
+        <section>
+            <h1>Remarkable lines</h1>
+            <p>sss</p>
+        </section>
+
         <script>
             var navLinks = document.getElementById("navLinks");
             function showMenu() {
