Edit description and add style to remarkable

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
         </section>
 
         <!-- Funny Quotes -->
-        <section>
+        <section class="remarkable">
             <h1>Remarkable lines</h1>
-            <p>sss</p>
+            <p>Times they could be a comedian.</p>
         </section>
 
         <script>
