Add divs to row class

--- a/index.html
+++ b/index.html
@@ -134,6 +134,27 @@
         <section class="remarkable">
             <h1>Remarkable lines</h1>
             <p>Times they could be a comedian.</p>
+
+            <div class="row">
+
+                <div class="lines">
+                    <img src="images/user1.jpg">
+                    <div>
+                        <p>ssss</p>
+                        <h3>Ma. Cassandra Cruz</h3>
+                    </div>
+                </div>
+
+                <div class="lines">
+                    <img src="images/user2.jpg">
+                    <div>
+                        <p>ssss</p>
+                        <h3>Alexi Romero</h3>
+                    </div>
+                </div>
+
+            </div>
+
         </section>
 
         <script>
