Add star icons to each div in the lines class

--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
                     <div>
                         <p>ssss</p>
                         <h3>Alexi Romero</h3>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
                     </div>
                 </div>
 
