Add description on first div in lines class

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
                 <div class="lines">
                     <img src="images/user1.jpg">
                     <div>
-                        <p>ssss</p>
+                        <p>"Tita Sam, diba ang Filipino ay halong Spanish at Tagalog.
+                            Bakit di na lang iyon tinawag na Spanlog?""
+                        </p>
                         <h3>Ma. Cassandra Cruz</h3>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
