Edit description in 2nd div of lines class

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                 <div class="lines">
                     <img src="images/user2.jpg">
                     <div>
-                        <p>ssss</p>
-                        <h3>Alexi Romero</h3>
+                        <p>Meoooooooooooowwwwwwwwwwwwwwww.</p>
+                        <h3>Beau</h3>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
