Shorten Beau's line

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="lines">
                     <img src="images/user2.jpg">
                     <div>
-                        <p>Meoooooooooooowwwwwwwwwwwwwwww.</p>
+                        <p>Meoooooooooooowwwww</p>
                         <h3>Beau</h3>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
