Add a call to action section

--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
 
         </section>
 
+        <!-- Call to Action-->
+        <section class="cta">
+            <h1>Interested on Web Developing? My mail is open!</h1>
+            <a href="">CONCTACT INFO</a>
+        </section>
+
         <script>
             var navLinks = document.getElementById("navLinks");
             function showMenu() {
