Edit h1 tag in cta class

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
         <!-- Call to Action-->
         <section class="cta">
-            <h1>Interested on Web Developing?<br>My mail is open!</h1>
+            <h1>Need a Web Dev Intern?<br>My mail is open!</h1>
             <a href="">CONCTACT INFO</a>
         </section>
 
