Add class "hero-btn" to contact info

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <!-- Call to Action-->
         <section class="cta">
             <h1>Need a Web Dev Intern?<br>My mail is open!</h1>
-            <a href="">CONCTACT INFO</a>
+            <a href="" class="hero-btn">CONCTACT INFO</a>
         </section>
 
         <script>
