--- a/index.html
+++ b/index.html
@@ -172,8 +172,17 @@
 
         <!-- Call to Action-->
         <section class="cta">
-            <h1>Need a Web Dev Intern?<br>My mail is open!</h1>
+            <h1>Need a Web Dev / IT Intern?<br>My mail is open!</h1>
             <a href="" class="hero-btn">CONCTACT INFO</a>
+        </section>
+
+        <!-- Footer-->
+        <section class="footer">
+            <h4>About Me</h4>
+            <p>I am currently pursuing BS Information Technology and
+                would like to be a part of a company that I can learn
+                from and contribute to with regards to the Web Dev / IT field.
+            </p>
         </section>
 
         <script>
