Add a break line in the about me description

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <section class="footer">
             <h4>About Me</h4>
             <p>I am currently pursuing BS Information Technology and
-                would like to be a part of a company that I can learn
+                would like to be a part of a company<br>that I can learn
                 from and contribute to with regards to the Web Dev / IT field.
             </p>
         </section>
