Add a div with class "icons" on footer

--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
                 would like to be a part of a company<br>that I can learn
                 from and contribute to with regards to the Web Dev / IT field.
             </p>
+            <div class="icons">
+                
+            </div>
         </section>
 
         <script>
