Add fb, github, linkedin icons in footer

--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
                 from and contribute to with regards to the Web Dev / IT field.
             </p>
             <div class="icons">
-                
+                <i class="fa fa-facebook"></i>
+                <i class="fa fa-github"></i>
+                <i class="fa fa-linkedin"></i>
+
             </div>
         </section>
 
