Remove text-box and change header to sub-header

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
     </head>
     <body>
-        <section class="header">
+        <section class="sub-header">
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
                 <div class="nav-links" id="navLinks">
@@ -25,12 +25,7 @@
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
-            <div class="text-box">
-                <h1>Extraordinary People</h1>
-                <p>They were the cherry on top of someone's already delicious life sundae.</p>
-                <a href="" class="hero-btn">Get to Know Them</a>
-            </div>
-        </section>
+            <h1>About Me</h1>
 
         <!-- Footer-->
         <section class="footer">
