Add closing section tag to sub-header

--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
             <h1>About Me</h1>
-
+        </section>
+        
         <!-- Footer-->
         <section class="footer">
             <h4>About Me</h4>
