Create an about-me section

--- a/about.html
+++ b/about.html
@@ -27,7 +27,22 @@
             </nav>
             <h1>About Me</h1>
         </section>
-        
+
+        <!-- About me content-->
+        <section class="about-me">
+            <div class="row">
+
+                <div class="about-col">
+                    <h1>I am Samantha Cruz</h1>
+                    <p>description</p>
+                    <a href="">EXPLORE NOW</a>
+                </div>
+                <div class="about-col">
+                    <img src="images/about.jpg">
+                </div>
+            </div>
+        </section>
+
         <!-- Footer-->
         <section class="footer">
             <h4>About Me</h4>
