--- a/about.html
+++ b/about.html
@@ -31,12 +31,12 @@
         <!-- About me content-->
         <section class="about-me">
             <div class="row">
-
                 <div class="about-col">
                     <h1>I am Samantha Cruz</h1>
-                    <p>description</p>
+                    <p>descrimsdfinsidsnfinfifn infsidnfinf nisn is</p>
                     <a href="">EXPLORE NOW</a>
                 </div>
+
                 <div class="about-col">
                     <img src="images/about.jpg">
                 </div>
