Add purple-btn extension to hero-btn class

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <div class="about-col">
                     <h1>I am Samantha Cruz</h1>
                     <p>descrimsdfinsidsnfinfifn infsidnfinf nisn is</p>
-                    <a href="" class="hero-btn">EXPLORE NOW</a>
+                    <a href="" class="hero-btn purple-btn">EXPLORE NOW</a>
                 </div>
 
                 <div class="about-col">
