--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="row">
 
                 <div class="friends-col">
-                    <img src="images/london.png">
+                    <img src="images/1.png">
                     <class class="layer">
                         <h3>Dide & Tahum</h3>
                         <p>They're like my dysfunctional family, but <br> with one who vapes like shit
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="friends-col">
-                    <img src="images/newyork.png">
+                    <img src="images/2.png">
                     <class class="layer">
                         <h3>Becca & Bontot</h3>
                         <p>They're most likely the peeps who would <br> bail me out of jail,
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="friends-col">
-                    <img src="images/washington.png">
+                    <img src="images/3.png">
                     <class class="layer">
                         <h3>Kaline</h3>
                         <p>We're the type of friends who always have each other's backs, 
