--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 
             <div class="row">
                 <div class="dear-col">
-                    <img src="images/library.png">
+                    <img src="images/family.png">
                     <h3>Strongest Support System</h3>
                     <p>You are a true inspiration and a shining example of what it means to be a supportive and loving unit.
                         We have faced challenges and obstacles together, and through it all, we have emerged stronger and more united than ever. 
                         Our love and support for one another is a beautiful thing to witness, and I have no doubt that it will continue to serve as my source of comfort and strength for years to come.</p>
                 </div>
                 <div class="dear-col">
-                    <img src="images/basketball.png">
+                    <img src="images/leximae.png">
                     <h3>Most Ethereal Woman</h3>
                     <p>If we're eating at Jollibee and you wanted the last chicken skin, I'd gladly give it to you.
                         If we are cold and only have 1 blanket, I'd happily let you take the huge part.
@@ -119,7 +119,7 @@
                     </p>
                 </div>
                 <div class="dear-col">
-                    <img src="images/cafeteria.png">
+                    <img src="images/sibeau.png">
                     <h3>Purrfectly Adorable Beau</h3>
                     <p>In times where I needed a hand, I found your paw.
                         To be your furmom is the most wonderful thing I have ever experienced.
@@ -138,7 +138,7 @@
             <div class="row">
 
                 <div class="lines">
-                    <img src="images/user1.jpg">
+                    <img src="images/user1.png">
                     <div>
                         <p>"Tita Sam, diba ang Filipino ay halong Spanish at Tagalog.
                             Bakit di na lang iyon tinawag na Spanlog?""
@@ -153,7 +153,7 @@
                 </div>
 
                 <div class="lines">
-                    <img src="images/user2.jpg">
+                    <img src="images/user2.png">
                     <div>
                         <p>Meoooooooooooowwwww</p>
                         <h3>Beau</h3>
