Add double quotes on Beau's line

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="lines">
                     <img src="images/user2.png">
                     <div>
-                        <p>Meoooooooooooowwwww</p>
+                        <p>"Meoooooooooooowwwww"</p>
                         <h3>Beau</h3>
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
