--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="about-col">
-                    <img src="images/about.jpg">
+                    <img src="images/about.png">
                 </div>
             </div>
         </section>
