--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">ABOUT ME</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT ME</a></li>
                         <li><a href="">MY GEMS</a></li>
                         <li><a href="">MESSAGE</a></li>
                         <li><a href="">CONTACT</a></li>
