--- a/my-gems.html
+++ b/my-gems.html
@@ -10,7 +10,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
     </head>
     <body>
-        <section class="sub-header">
+        <section class="sub-header my-gems">
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
                 <div class="nav-links" id="navLinks">
