Add contents for people I cherish

--- a/my-gems.html
+++ b/my-gems.html
@@ -25,7 +25,33 @@
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
+            <h1>My Gems</h1>
+        </section>
+
+        <section class="mygems">
             <h1>People I Cherish</h1>
+            <p>People who love real, sweet, and hard.</p>
+
+            <div class="row">
+                <div class="main-col">
+                    <h3>Mama & Papa</h3>
+                    <p>You raised me well. I owe you a huge part of
+                        me, especially the ones that knows how to love purely.
+                        I am proud to call you both my mama and papa.</p>
+                </div>
+                <div class="main-col">
+                    <h3>Lexi</h3>
+                    <p>You are the definition of serenity and beauty. My happiness and
+                        constant strive for self-love happens because you love 
+                        me dearly.
+                    </p>
+                </div>
+                <div class="main-col">
+                    <h3>Nics & MC</h3>
+                    <p>You bring out the childlike humor within me. Thank you for the
+                        shared bondings we have as we grow into beautiful women.</p>
+                </div>
+            </div>
         </section>
 
         <!-- Footer-->
