Add 2 more section contents

--- a/about.html
+++ b/about.html
@@ -48,6 +48,77 @@
             </div>
         </section>
 
+        <!--- Friends I Ha- Love-->
+        <section class="mygems2">
+            <h1>Friends I Ha- Love</h1>
+            <p>They're okay.</p>
+
+            <div class="row">
+
+                <div class="friends-col">
+                    <img src="images/1.png">
+                    <class class="layer">
+                        <h3>Dide & Tahum</h3>
+                        <p>They're like my dysfunctional family, but <br> with one who vapes like shit
+                            and <br> the other who's always infuriated <br> about her sperm donor.</p>
+                    </class>
+                </div>
+
+                <div class="friends-col">
+                    <img src="images/2.png">
+                    <class class="layer">
+                        <h3>Becca & Bontot</h3>
+                        <p>They're most likely the peeps who would <br> bail me out of jail,
+                            but will be the main reason <br> I'm there in the first place.</p>
+                    </class>
+                </div>
+
+                <div class="friends-col">
+                    <img src="images/3.png">
+                    <class class="layer">
+                        <h3>Kaline</h3>
+                        <p>We're the type of friends who always have each other's backs, 
+                            but also roast each other relentlessly.</p>
+                    </class>
+                </div>
+            </div>
+        </section>
+
+        <!-- Fam and My Lover-->
+        <section class="dearest">
+            <h1>My Fam and My Lover</h1>
+            <p>My love for them is too good not to showcase</p>
+
+            <div class="row">
+                <div class="dear-col">
+                    <img src="images/family.png">
+                    <h3>Strongest Support System</h3>
+                    <p>You are a true inspiration and a shining example of what it means to be a supportive and loving unit.
+                        We have faced challenges and obstacles together, and through it all, we have emerged stronger and more united than ever. 
+                        Our love and support for one another is a beautiful thing to witness, and I have no doubt that it will continue to serve as my source of comfort and strength for years to come.</p>
+                </div>
+                <div class="dear-col">
+                    <img src="images/leximae.png">
+                    <h3>Most Ethereal Woman</h3>
+                    <p>If we're eating at Jollibee and you wanted the last chicken skin, I'd gladly give it to you.
+                        If we are cold and only have 1 blanket, I'd happily let you take the huge part.
+                        If we are eating sinigang na hipon and we're both hungry, I'd gladly peel off the shrimps first
+                        so you could eat with ease. These aren't enough to say how much I adore you and how 
+                        I will forever bow down to your beauty. My love for you is beyond the strength of what words can offer.
+                    </p>
+                </div>
+                <div class="dear-col">
+                    <img src="images/sibeau.png">
+                    <h3>Purrfectly Adorable Beau</h3>
+                    <p>In times where I needed a hand, I found your paw.
+                        To be your furmom is the most wonderful thing I have ever experienced.
+                        Your unconditional love and support have been a constant source of comfort and joy in my life.
+                        I am grateful every day for the happiness and companionship you bring into our home.</p>
+                </div>
+            </div>
+            
+        </section>
+
         <!-- Footer-->
         <section class="footer">
             <h4>About Me</h4>
