--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Gems</title>
+        <title>Blog</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +19,13 @@
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT ME</a></li>
                         <li><a href="">MY GEMS</a></li>
-                        <li><a href="">MESSAGE</a></li>
+                        <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
-            <h1>My Gems</h1>
+            <h1>Featured Story</h1>
         </section>
 
         <!-- Footer-->
