--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT ME</a></li>
                         <li><a href="">MY GEMS</a></li>
-                        <li><a href="">MESSAGE</a></li>
+                        <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- Footer-->
         <section class="footer">
             <h4>About Me</h4>
