--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="about.html">ABOUT ME</a></li>
-                        <li><a href="">MY GEMS</a></li>
-                        <li><a href="">BLOG</a></li>
+                        <li><a href="my-gems.html">MY GEMS</a></li>
+                        <li><a href="blog.html">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
