--- a/blog.html
+++ b/blog.html
@@ -16,10 +16,10 @@
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">ABOUT ME</a></li>
-                        <li><a href="">MY GEMS</a></li>
-                        <li><a href="">BLOG</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT ME</a></li>
+                        <li><a href="my-gems.html">MY GEMS</a></li>
+                        <li><a href="blog.html">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
