--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,18 @@
             <h1>Featured Story</h1>
         </section>
 
+        <!-- Blog Content-->
+        <section class="blog-content">
+            <div class="row">
+                <div class="blog-left">
+                    <img src="images/certificate.jpg">
+                    <h2>26 Months of Love</h2>
+                </div>
+                <div class="blog-right">
+
+                </div>
+            </div>
+        </section>
         <!-- Footer-->
         <section class="footer">
             <h4>About Me</h4>
