Add poem content on blog-left class

--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,22 @@
                 <div class="blog-left">
                     <img src="images/certificate.jpg">
                     <h2>26 Months of Love</h2>
+                    <p>Oh lovely lady with eyes so bright,<br>
+                        You shine like the stars in the dark of night,<br>
+                        Your smile is like sunshine on a cloudy day,<br>
+                        And your grace and beauty take my breath away.<br><br>
+                        Your hair, it flows like a gentle stream,<br>
+                        And your laughter is like a beautiful dream,<br>
+                        You light up a room with your elegant style,<br>
+                        And your kindness and warmth make life worthwhile.<br><br>
+                        Your spirit is like a bird in flight,<br>
+                        Soaring high with pure delight,<br>
+                        And though you may not know it yet,<br>
+                        You touch so many hearts that you've met.<br><br>
+                        So lovely lady with a heart of gold,<br>
+                        You are more precious than any jewel to hold,<br>
+                        May you always know how much you are loved,<br>
+                        And how your beauty shines bright like the stars above.<br><br></p>
                 </div>
                 <div class="blog-right">
 
