Add text to h2 tag in class blog-left

--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="blog-left">
                     <img src="images/certificate.jpg">
-                    <h2>26 Months of Love</h2>
+                    <h2>26 Months of Love - Happy Monthsary, Alexi Mae!</h2>
                     <p>Oh lovely lady with eyes so bright,<br>
                         You shine like the stars in the dark of night,<br>
                         Your smile is like sunshine on a cloudy day,<br>
