Change the content of the poem

--- a/blog.html
+++ b/blog.html
@@ -34,25 +34,25 @@
                 <div class="blog-left">
                     <img src="images/certificate.jpg">
                     <h2>26 Months of Love - Happy Monthsary, Alexi Mae!</h2>
-                    <p>Oh lovely lady with eyes so bright,<br>
-                        You shine like the stars in the dark of night,<br>
-                        Your smile is like sunshine on a cloudy day,<br>
-                        And your grace and beauty take my breath away.<br><br>
-                        Your hair, it flows like a gentle stream,<br>
-                        And your laughter is like a beautiful dream,<br>
-                        You light up a room with your elegant style,<br>
-                        And your kindness and warmth make life worthwhile.<br><br>
-                        Your spirit is like a bird in flight,<br>
-                        Soaring high with pure delight,<br>
-                        And though you may not know it yet,<br>
-                        You touch so many hearts that you've met.<br><br>
-                        So lovely lady with a heart of gold,<br>
-                        You are more precious than any jewel to hold,<br>
-                        May you always know how much you are loved,<br>
-                        And how your beauty shines bright like the stars above.<br><br></p>
+                    <p>When you smile, the crescent moon turns shy,<br>
+                        Because it knows you just outshined its starry sky<br>
+                        When you laugh, the world immediately stops to spin<br>
+                        As it knows it needs to honor the music it's hearing<br><br>
+                        When you cry, my heart aches and starts to throttle<br>
+                        Because I know you are the least deserving of any trouble <br>
+                        When you sing, my heart bursts like the joyous spring<br>
+                        As it encounters hope in this world that's ever-changing<br><br>
+                        Your spirit is both like a bird and an owl<br>
+                        Soaring high into the sky but remains strong against fouls<br>
+                        And though you may have no idea, but you touch a lot of hearts<br>
+                        You leave a power so full of life that turns life into an art<br><br>
+                        My lovely lady with a heart of gold,<br>
+                        I hope your spirit never changes<br>
+                        May you always know how much you're loved<br>
+                        Through the years, through every written pages <br><br></p>
                 </div>
                 <div class="blog-right">
-
+                    <h3></h3>
                 </div>
             </div>
         </section>
