--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="blog-left">
                     <img src="images/certificate.jpg">
-                    <h2>26 Months of Love - Happy Monthsary, Alexi Mae!</h2>
+                    <h2>26 Months of Love - Happy Monthsary, baby</h2>
                     <p>When you smile, the crescent moon turns shy,<br>
                         Because it knows you just outshined its starry sky<br>
                         When you laugh, the world immediately stops to spin<br>
@@ -52,7 +52,20 @@
                         Through the years, through every written pages <br><br></p>
                 </div>
                 <div class="blog-right">
-                    <h3></h3>
+                    <h3>Favorite Dates</h3>
+                    <div>
+                        <span>Cuddles + Harutan</span>
+                        <span>100%</span>
+
+                        <span>Chill with Papa Will</span>
+                        <span>110%</span>
+
+                        <span>Mall + Eating out</span>
+                        <span>99%</span>
+
+                        <span>Sleepover</span>
+                        <span>200%</span>
+                    </div>
                 </div>
             </div>
         </section>
