Put each span pairs into div tags

--- a/blog.html
+++ b/blog.html
@@ -56,13 +56,16 @@
                     <div>
                         <span>Cuddles + Harutan</span>
                         <span>100%</span>
-
+                    </div>
+                    <div>
                         <span>Chill with Papa Will</span>
                         <span>110%</span>
-
+                    </div>
+                    <div>
                         <span>Mall + Eating out</span>
                         <span>99%</span>
-
+                    </div>
+                    <div>
                         <span>Sleepover</span>
                         <span>200%</span>
                     </div>
