Add div tag of comment-box class for message form

--- a/blog.html
+++ b/blog.html
@@ -50,6 +50,16 @@
                         I hope your spirit never changes<br>
                         May you always know how much you're loved<br>
                         Through the years, through every written pages <br><br></p>
+
+                        <div class="comment-box">
+                            <h3>Leave a message</h3>
+                            <form class="comment-form">
+                                <input type="text" placeholder="Enter Name">
+                                <input type="email" placeholder="Enter Email">
+                                <textarea rows="5" placeholder="Your Message"></textarea>
+                                <button type="submit" class="hero-btn purple-btn">SEND MESSAGE</button>
+                            </form>
+                        </div>
                 </div>
                 <div class="blog-right">
                     <h3>Favorite Dates</h3>
