Add href attribute and change anchor text

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                         outlook on life and try to maintain a "hakuna matata" approach to things. Despite this relaxed attitude,
                         I am also an overachiever, I push myself to reach new heights in my personal and professional life. 
                         Overall, I am a well-rounded individual with a mix of lightheartedness and ambition.</p>
-                    <a href="" class="hero-btn purple-btn">GET TO KNOW ME</a>
+                    <a href="blog.html" class="hero-btn purple-btn">MY STORY OF THE MONTH</a>
                 </div>
 
                 <div class="about-col">
