--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <li><a href="about.html">ABOUT ME</a></li>
                         <li><a href="my-gems.html">MY GEMS</a></li>
                         <li><a href="blog.html">BLOG</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
