Change h1 tag content to "Contact Me"

--- a/contact.html
+++ b/contact.html
@@ -25,27 +25,7 @@
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
-            <h1>About Me</h1>
-        </section>
-
-        <!-- About me content-->
-        <section class="about-me">
-            <div class="row">
-                <div class="about-col">
-                    <h1>I am Samantha Cruz</h1>
-                    <p>I am a person with a unique sense of humor that tends to catch people off-guard, 
-                        often eliciting laughter from unexpected sources. I have a tendency to overthink things, 
-                        which can sometimes lead to a feeling of being overwhelmed, but I also have a laid-back 
-                        outlook on life and try to maintain a "hakuna matata" approach to things. Despite this relaxed attitude,
-                        I am also an overachiever, I push myself to reach new heights in my personal and professional life. 
-                        Overall, I am a well-rounded individual with a mix of lightheartedness and ambition.</p>
-                    <a href="blog.html" class="hero-btn purple-btn">MY STORY OF THE MONTH</a>
-                </div>
-
-                <div class="about-col">
-                    <img src="images/about.png">
-                </div>
-            </div>
+            <h1>Contact Me</h1>
         </section>
 
         <!-- Footer-->
