--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,37 @@
         <section class="location">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3862.5870430117807!2d121.04100151744385!3d14.508380000000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397cf25618a2dd3%3A0x7a51ed5a0dbf6e1b!2sFTI-MRB%20Family%20Townhomes%2C%20Barangay%20Western%20Bicutan%2C%20Taguig%20City!5e0!3m2!1sen!2sph!4v1677658397663!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
+
+        <section class="contact-me">
+            <div class="contact-col">
+
+                <div>
+                    <i class="fa fa-home"></i>
+                    <span>
+                        <h5>FTI-MRB Family Townhomes</h5>
+                        <p>Western Bicutan, Taguig</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <span>
+                        <h5>+63 945 446 5284</h5>
+                        <p>Monday to Sunday, 10 AM to 6 PM</p>
+                    </span>
+                </div>
+                <div>
+                    <i class="fa fa-envelope-o"></i>
+                    <span>
+                        <h5>sam.domenscruz@gmail.com</h5>
+                        <p>Email me for open internship positions</p>
+                    </span>
+                </div>
+
+            </div>
+            <div class="contact-col">
+                
+            </div>
+        </section>
         <!-- Footer-->
         <section class="footer">
             <h4>About Me</h4>
