--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,13 @@
 
             </div>
             <div class="contact-col">
-                
+                <form action="">
+                    <input type="text" placeholder="Enter Your Name" required>
+                    <input type="emaik" placeholder="Enter Email Address" required>
+                    <input type="text" placeholder="Enter Message's Subject" required>
+                    <textarea rows="8" placeholder="Message" required></textarea>
+                    <button type="submit" class="hero-btn purple-btn">Send Message</button>
+                </form>
             </div>
         </section>
         <!-- Footer-->
