Edit contents of comment-box to be sending comment

--- a/blog.html
+++ b/blog.html
@@ -52,12 +52,12 @@
                         Through the years, through every written pages <br><br></p>
 
                         <div class="comment-box">
-                            <h3>Leave a message</h3>
+                            <h3>Leave a comment</h3>
                             <form class="comment-form">
                                 <input type="text" placeholder="Enter Name">
                                 <input type="email" placeholder="Enter Email">
-                                <textarea rows="5" placeholder="Your Message"></textarea>
-                                <button type="submit" class="hero-btn purple-btn">SEND MESSAGE</button>
+                                <textarea rows="5" placeholder="Your Comment"></textarea>
+                                <button type="submit" class="hero-btn purple-btn">POST COMMENT</button>
                             </form>
                         </div>
                 </div>
