Link contact.html to anchor tag of CONTACT INFO

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <!-- Call to Action-->
         <section class="cta">
             <h1>Need a Web Dev / IT Intern?<br>My mail is open!</h1>
-            <a href="" class="hero-btn">CONCTACT INFO</a>
+            <a href="contact.html" class="hero-btn">CONCTACT INFO</a>
         </section>
 
         <!-- Footer-->
