Change main image of blog to blog-story.png

--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
         <section class="blog-content">
             <div class="row">
                 <div class="blog-left">
-                    <img src="images/certificate.jpg">
+                    <img src="images/blog-story.png">
                     <h2>26 Months of Love - Happy Monthsary, baby</h2>
                     <p>When you smile, the crescent moon turns shy,<br>
                         Because it knows you just outshined its starry sky<br>
