Create structure of php

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="contact-col">
-                <form action="">
+                <form action="form-handler.php">
                     <input type="text" placeholder="Enter Your Name" required>
                     <input type="emaik" placeholder="Enter Email Address" required>
                     <input type="text" placeholder="Enter Message's Subject" required>
