--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,11 @@
                 </div>
             </div>
             <div class="contact-col">
-                <form action="form-handler.php">
-                    <input type="text" placeholder="Enter Your Name" required>
-                    <input type="emaik" placeholder="Enter Email Address" required>
-                    <input type="text" placeholder="Enter Message's Subject" required>
-                    <textarea rows="8" placeholder="Message" required></textarea>
+                <form action="form-handler.php" method="post">
+                    <input type="text" name="name" placeholder="Enter Your Name" required>
+                    <input type="email" name="visitor_email" placeholder="Enter Email Address" required>
+                    <input type="text"  name="subject" placeholder="Enter Message's Subject" required>
+                    <textarea rows="8"  name="message" placeholder="Message" required></textarea>
                     <button type="submit" class="hero-btn purple-btn">Send Message</button>
                 </form>
             </div>
