--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
             <div class="contact-col">
                 <form action="form-handler.php" method="post">
                     <input type="text" name="name" placeholder="Enter Your Name" required>
-                    <input type="email" name="visitor_email" placeholder="Enter Email Address" required>
+                    <input type="email" name="email" placeholder="Enter Email Address" required>
                     <input type="text"  name="subject" placeholder="Enter Message's Subject" required>
                     <textarea rows="8"  name="message" placeholder="Message" required></textarea>
                     <button type="submit" class="hero-btn purple-btn">Send Message</button>
