--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 from and contribute to with regards to the Web Dev / IT field.
             </p>
             <div class="icons">
-                <i class="fa fa-facebook"></i>
+                <i class="fa fa-facebook" href="https://www.facebook.com/Cereal.killer28/"></i>
                 <i class="fa fa-github"></i>
                 <i class="fa fa-linkedin"></i>
 
